[package]
name = "tank"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
debug = ["colored", "bevy-inspector-egui"]



[dependencies]
colored = { version = "2.0", optional = true }
bevy-inspector-egui = { version = "0.17", optional = true }
bevy_asset_loader = {version = "0.14.1", features = ["2d"]}
rand = "0.8"


[dependencies.bevy]
version = "0.9.1"
default-features = false
features = [
  "render",
  "bevy_winit",
  "bevy_gilrs",
  "bevy_audio",
  "png",
  "hdr",
  "vorbis",
  "x11",
  "filesystem_watcher",
]


# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3 